[package]
name = "canon-json"
version = "0.2.0"
edition = "2021"
description = "serde_json Formatter to serialize as canonical JSON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/canon-json-rs"
keywords = ["json"]

[dependencies]
serde = "1"
serde_json = "1"
unicode-normalization = "0.1"

[dev-dependencies]
serde_derive = "1"
