[package]
name = "canon-json"
version = "0.2.0"
edition = "2021"
description = "serde_json Formatter to serialize as RFC 8785 canonical JSON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/canon-json-rs"
keywords = ["json"]

[dependencies]
serde        = "1.0.0"
serde_derive = "1.0"
serde_json   = "1.0"

[dev-dependencies]
proptest = "1.7.0"
similar-asserts = "1.7.0"

